public/stylesheets/index.css
/* ... */
.login-to-signup a{
  color: var(--text-color);
}

/*--------------------------askquestion page setup------------------------*/
.ask_question {
max-width: 500px;
  width: 100%;
  background: var(--secondary-background);
  padding: 25px 30px;
  border-radius: 10px;
  margin: 100px auto;
  box-shadow: 0 5px 10px rgba(0,0,0,0.15);
  border: 1px solid var(--accent-color);
}
.ask_question .title {
  font-size: 25px;
  font-weight: 500;
  color: var(--text-color);
}

.ask_question form .form-group {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;

}
.ask-question-form-spacing {
  margin-top: 10px;
  margin-bottom: 10px;
}

.ask_question form .form-group input{
  width: 350px;
  padding: 10px;
}

.ask_question form .form-group textarea{
  height: 400px;
  width: 350px;
  padding: 10px;
}

.ask_question .details {
  margin-top: 20px;
}

.ask_question_errors {
  background-color: red;
  max-width: 350px;
  margin: auto;
  margin-top: 20px;
}

.ask_question_errors ul {
  list-style-type: none;
}

.ask_question .form-control {

  margin: 0px 0 0px 0;
  width: calc(100%/2- 20px);
  height: 45px;
}

/*--------------------------landing page setup------------------------*/

.landing-page-title {
  font-size: 30px;
  padding: 10px 30px;
  margin: 20px;
  border: 3px solid #ff562285;
  border-radius: 1rem;
  display: inline-block;
}

.landing-page-top-10 {
  margin-bottom: 20px;
}

.landing-page-top-10 p{
  font-size: 25px;
  color: var(--accent-color);
}

.landing-question-1 {
  grid-area: landing-question-1;
}

.landing-question-2 {
  grid-area: landing-question-2;
}

.landing-question-3 {
  grid-area: landing-question-3;
}

.landing-question-4 {
  grid-area: landing-question-4;
}

.landing-question-5 {
  grid-area: landing-question-5;
}

.landing-question-6 {
  grid-area: landing-question-6;
}

.landing-question-7 {
  grid-area: landing-question-7;
}

.landing-question-8 {
  grid-area: landing-question-8;
}

.landing-question-9 {
  grid-area: landing-question-9;
}

.landing-question-10 {
  grid-area: landing-question-10;
}

.landing-question-box-container {
  justify-content: center;
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: auto;
  grid-template-areas: 
    "landing-question-1 landing-question-2"
    "landing-question-3 landing-question-4"
    "landing-question-5 landing-question-6 "
    "landing-question-7 landing-question-8 "
    "landing-question-9 landing-question-10 ";
    gap: 40px 120px;
}


.landing-question-box {
  color: var(--text-color);
  background-color: var(--secondary-background);
  border: 1px solid var(--accent-color);
  border-radius: 2rem;
  padding:30px;
  width: 400px;
  height: 400px;
  text-align: left;
}

.landing-question-title-text-wrapper {
  height: 290px;
}

.landing-question-box-title {
  font-size: 18px;
  font-weight: 700;
  color: var(--accent-color);
  text-decoration: none;
  padding-top: 3px;
  padding-bottom: 3px;
  margin-bottom: 5px;
  border-radius: 1rem;
  max-height: 80px;
  overflow-y: hidden;
}

.landing-question-box-top-divider {
  border: 1px solid #ff562285;
  border-radius: 5px;
  margin-bottom: 10px;
}

.landing-question-box-text {
  height: 180px;
  overflow-y: hidden;
}

.landing-question-box-category {
  position: relative;
  bottom: -10px;
  left: 10px;
  background-color: var(--main-background);
  padding: 7px 10px;
  display: inline-block;
  border-radius: 2rem;
}

.landing-question-box-userName {
  position: relative;
  left: 220px;
  bottom: 40px;
  overflow: hidden;
}

.landing-question-box-score {
  position: relative;
  left: 220px;
  bottom: -5px;
}

/*--------------------------question page setup------------------------*/
.question-page-question-box-container {
  display:grid;
  justify-content: center;
  margin-top: 20px;
}


.question-page-question-box {
  color: var(--text-color);
  background-color: var(--secondary-background);
  border: 1px solid var(--accent-color);
  border-radius: 2rem;
  padding:30px;
  width: 1200px;
  text-align: left;
}

/* .question-page-question-title-text-wrapper {

} */

.question-page-question-box-title {
  font-size: 18px;
  font-weight: 700;
  color: var(--accent-color);
  text-decoration: none;
  padding-top: 3px;
  padding-bottom: 3px;
  margin-bottom: 5px;
  border-radius: 1rem;
  overflow-y: hidden;
}

.question-page-question-box-top-divider {
  border: 1px solid #ff562285;
  border-radius: 5px;
  margin-bottom: 10px;
}

.question-page-question-box-text {
  margin-bottom:8px;
  overflow-wrap: break-word;
}

.question-page-question-box-category {
  position: relative;
  bottom: -80px;
  left: 10px;
  background-color: var(--main-background);
  padding: 7px 10px;
  display: inline-block;
  border-radius: 2rem;
}

.question-page-question-box-score {
  position: relative;
  left: 1000px;
  bottom: -30px;
}

.question-page-question-box-userName {
  position: relative;
  left: 1000px;
  bottom: 15px;
  overflow: hidden;
}

/* .question-page-question-voting-icons {
  display:flex;
  flex-direction: row; 
  position: relative;
  left: 1100px;
  bottom: -48px;
} */

.question-page-upvote-question-icon {
  position: relative;
  left: 1100px;
  bottom: -48px;
  margin-right: 6px;
  z-index: 1;
}

.question-page-downvote-question-icon {
  position: relative;
  left: 1100px;
  bottom: -48px;
  margin-right: 6px;
  z-index: 1;
}

.question-page-delete-and-edit-question {
  position: relative;
  left: 950px;
  bottom: -63px;
}

.question-page-delete-question-icon {
  margin-right: 5px;
}

.fa-caret-square-up,
.fa-caret-square-down {
  font-size: 16px;
}

.unclickable-vote-button {
  pointer-events: none;
}

.upvoted-arrow {
  color: var(--accent-color);
}

.downvoted-arrow {
  color: #3a99be;
}

.question-page-delete-and-edit-question {
  position: relative;
  left: 950px;
  bottom: -63px;
}

.question-page-delete-question-icon {
  margin-right: 8px;
}

.fa-caret-square-up,
.fa-caret-square-down {
  font-size: 16px;
}
/* ... */

